[package]
name = "surf"
version = "0.0.77"
edition = "2021"

[dependencies]
thiserror          = { version = "1.0.63", features = [] }
tokio              = { version = "1.39.2", features = ["full"] }
tokio-util         = { version = "0.7.11", features = [] }
tracing            = { version = "0.1.40", features = [] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"] }

actix-web = { version = "4.8.0", features = [] }

clap = { version = "4.5.11", features = ["derive"] }

rocksdb  = { version = "0.22.0",  features = [] }
postcard = { version = "1.0.8",   features = ["use-std"] }
serde    = { version = "1.0.204", features = ["derive"] }

serde_json                = { version = "1.0.121", features = [] }
solana-client             = { version = "2.0.3",   features = [] }
solana-sdk                = { version = "2.0.3",   features = [] }
solana-transaction-status = { version = "2.0.3",   features = [] }
